--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 .input {
   display: block;
+  max-width: 100%;
   width: 800px;
   height: 300px;
   margin: 0 auto 10px;
@@ -19,10 +20,6 @@
   user-select: none;
   transition: bottom 0.4s;
 }
-/* 
-.keyboard-hidden {
-  bottom: -100%;
-} */
 
 .keyboard--keys {
   margin: 0 auto;
@@ -57,6 +54,7 @@
   -webkit-tap-highlight-color: transparent;
   position: relative;
   user-select: none;
+  transition: background-color 150ms linear;
 }
 
 .keyboard--key:hover{
@@ -79,17 +77,6 @@
 .keyboard--key-extra_wide {
   flex-grow: 18;
 }
-
-/* .keyboard--key-activatable::after {
-  content: '';
-  top: 10px;
-  right: 10px;
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  background: rgba(0, 0, 0, 0.4);
-  border-radius: 50%;
-} */
 
 .keyboard--key-dark {
   background: #2f2f2f59;
