--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 .input {
   display: block;
-  max-width: 100%;
-  width: 800px;
+  box-sizing: border-box;
+  width: calc(100% - 4px);
+  max-width: 800px;
   height: 300px;
-  margin: 0 auto 10px;
+  margin: 0 auto;
   padding: 10px;
   font-size: 18px;
   color: #444;
@@ -26,6 +27,7 @@
   width: 100%;
   max-width: 1300px;
   text-align: center;
+  overflow: hidden;
 }
 
 .keyboard--row {
